[gd_scene load_steps=66 format=3 uid="uid://u7in03hehlyo"]

[ext_resource type="Script" path="res://player/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://2mnbbcbtsla2" path="res://player/melee_ground.png" id="2"]
[ext_resource type="Theme" uid="uid://chlv0cqyoc1kh" path="res://default_theme.tres" id="3_hdcwy"]
[ext_resource type="Texture2D" uid="uid://b0hkf03ixpydt" path="res://player/run_cycle.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dlk7ixtqhmqh8" path="res://player/standing.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dpmkvmq31jtj2" path="res://player/air_frames.png" id="6"]
[ext_resource type="Texture2D" uid="uid://5s1d4jg715e2" path="res://player/slide.png" id="6_ta3ya"]
[ext_resource type="Texture2D" uid="uid://c4hn0jxvskenr" path="res://player/melee_air.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bvelcjkgdg27g" path="res://player/melee_effect.png" id="8"]
[ext_resource type="Script" path="res://player/player_camera.gd" id="10_2jd0b"]
[ext_resource type="Texture2D" uid="uid://cvm8qy8s34ius" path="res://entities/light.png" id="11"]
[ext_resource type="Script" path="res://player/Debug_Labels.gd" id="12_codes"]

[sub_resource type="Animation" id="49"]
resource_name = "jump"
length = 0.05
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0166667, 0.0333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0166667, 0.0333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-4, -24), Vector2(-1, -24), Vector2(-4, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../audio_stream_player:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../audio_stream_player:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../CollisionPolygon2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="50"]
resource_name = "run"
length = 0.5
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.483333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../CollisionPolygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="51"]
resource_name = "stand"
length = 0.0166667
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["stand"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../CollisionPolygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_afx62"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"slide"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 0.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_0simm"]
resource_name = "skid"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"stand"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../CollisionPolygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v23ep"]
_data = {
"jump": SubResource("49"),
"run": SubResource("50"),
"skid": SubResource("Animation_0simm"),
"slide": SubResource("Animation_afx62"),
"stand": SubResource("51")
}

[sub_resource type="Animation" id="Animation_qkbkj"]
resource_name = "melee"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flip/sword:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sword"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flip/sword:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("flip/hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("flip/hitbox:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("flip/hitbox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_03drn"]
resource_name = "none"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flip/sword:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"none"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08t8n"]
_data = {
"melee": SubResource("Animation_qkbkj"),
"none": SubResource("Animation_03drn")
}

[sub_resource type="Animation" id="53"]
resource_name = "hit flash"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flip/body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio_stream_player:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio_stream_player:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="61"]
resource_name = "none"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa6o5"]
_data = {
"hit flash": SubResource("53"),
"none": SubResource("61")
}

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("6")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("6")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("6")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("7")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("2")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("2")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("2")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("2")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("2")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("2")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("4")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("4")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("4")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("4")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("4")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("4")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("4")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("4")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("4")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("4")
region = Rect2(288, 0, 32, 48)

[sub_resource type="SpriteFrames" id="13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}],
"loop": false,
"name": &"melee air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}],
"loop": false,
"name": &"melee ground",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}, {
"duration": 1.0,
"texture": SubResource("47")
}],
"loop": false,
"name": &"run",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ta3ya")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": false,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("8")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="55"]
atlas = ExtResource("8")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("8")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("8")
region = Rect2(288, 0, 96, 48)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("8")
region = Rect2(384, 0, 96, 48)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("8")
region = Rect2(480, 0, 96, 48)

[sub_resource type="SpriteFrames" id="60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("54")
}, {
"duration": 1.0,
"texture": SubResource("55")
}, {
"duration": 1.0,
"texture": SubResource("56")
}, {
"duration": 1.0,
"texture": SubResource("57")
}, {
"duration": 1.0,
"texture": SubResource("58")
}, {
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"sword",
"speed": 60.0
}]

[sub_resource type="RectangleShape2D" id="52"]
size = Vector2(86, 34)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 4
script = ExtResource("1")
bullet_settings = []

[node name="animation_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../flip/body")
callback_mode_process = 2
libraries = {
"": SubResource("AnimationLibrary_v23ep")
}

[node name="action_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_08t8n")
}

[node name="effects_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oa6o5")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-7, 0, -7, -43, 0, -47, 7, -43, 7, 0, 0, 0)

[node name="flip" type="Node2D" parent="."]

[node name="body" type="AnimatedSprite2D" parent="flip"]
light_mask = 0
texture_filter = 5
texture_repeat = 1
sprite_frames = SubResource("13")
animation = &"stand"
speed_scale = 0.5
offset = Vector2(-5, -24)

[node name="sword" type="AnimatedSprite2D" parent="flip"]
texture_filter = 5
texture_repeat = 1
position = Vector2(0, -24)
sprite_frames = SubResource("60")
animation = &"none"
offset = Vector2(16, 0)

[node name="hitbox" type="Area2D" parent="flip"]
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="collision_shape_2d" type="CollisionShape2D" parent="flip/hitbox"]
position = Vector2(11, -30)
shape = SubResource("52")

[node name="jump_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="audio_stream_player" type="AudioStreamPlayer" parent="."]

[node name="light_2d" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -32)
color = Color(0.5, 0.5, 0.5, 1)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter_smooth = 1.0
texture = ExtResource("11")
texture_scale = 3.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -64)
position_smoothing_enabled = true
position_smoothing_speed = 15.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.0
drag_right_margin = 0.1
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("10_2jd0b")

[node name="camera_center" type="Marker2D" parent="Camera2D"]

[node name="Debug_Labels" type="VBoxContainer" parent="Camera2D/camera_center"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme = ExtResource("3_hdcwy")
alignment = 2
script = ExtResource("12_codes")

[node name="can_stand_raycast" type="RayCast2D" parent="."]
target_position = Vector2(0, -47)
collision_mask = 4
collide_with_areas = true

[connection signal="animation_finished" from="effects_player" to="." method="_on_effects_player_animation_finished"]
[connection signal="area_entered" from="flip/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="flip/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
